force-app/main/default/objects/Plant_Stock__c/Plant_Stock__c.object-meta.xml
<CustomObject>
    <label>Plant Stock</label>
    <nameField>
        <displayFormat>DPS-{0000}</displayFormat>
        <label>Plant Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>