force-app/main/default/objects/Plant_Stock__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Plant Stocks</relationshipLabel>
    <relationshipName>Plant_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>