force-app/main/default/objects/Plant_Stock__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <label>SKU Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>