force-app/main/default/objects/Plant_Stock__c/fields/Stock_Qty__c.field-meta.xml
<CustomField>
    <fullName>Stock_Qty__c</fullName>
    <label>Stock Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>